--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
             >Web<span class="header-logo-finish">Studio</span>
           </a>
           <ul class="header-list">
-            <li>
-              <a href="./index.html" class="header-list-specifical">Studio</a>
+            <li class="header-item">
+              <a href="./index.html" class="header-list-specifical current"
+                >Studio</a
+              >
             </li>
-            <li><a href="" class="header-list-specifical">Portfolio</a></li>
-            <li><a href="" class="header-list-specifical">Contacts</a></li>
+            <li class="header-item">
+              <a href="" class="header-list-specifical">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-list-specifical">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="adress-navigation">
@@ -66,29 +72,53 @@
       <section class="section-two">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
+
           <ul class="list-two">
             <li class="list-item">
+              <div class="list-icon">
+                <svg class="icon-features">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
+
             <li class="list-item">
+              <div class="list-icon">
+                <svg class="icon-features">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
+
             <li class="list-item">
+              <div class="list-icon">
+                <svg class="icon-features">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-title">Diligence</h3>
               <p class="text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
+
             <li class="list-item">
+              <div class="list-icon">
+                <svg class="icon-features">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -115,6 +145,36 @@
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="text-team">Product Designer</p>
               </div>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </div>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -128,6 +188,36 @@
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="text-team">Frontend Developer</p>
               </div>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </div>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -141,6 +231,36 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="text-team">Marketing</p>
               </div>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </div>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -154,6 +274,36 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="text-team">UI Designer</p>
               </div>
+              <ul class="team-list-icon">
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="team-item-icon">
+                  <div class="team-icon-border">
+                    <svg class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </div>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -170,6 +320,13 @@
                 width="360"
                 height="300"
               />
+              <div class="overlay">
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="title-portfolio">Banking App</h3>
                 <p class="text">App</p>
@@ -182,6 +339,13 @@
                 width="360"
                 height="300"
               />
+              <div class="overlay">
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="title-portfolio">Cashless Payment</h3>
                 <p class="text">Marketing</p>
@@ -194,6 +358,13 @@
                 width="360"
                 height="300"
               />
+              <div class="overlay">
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="title-portfolio">Meditation App</h3>
                 <p class="text">App</p>
@@ -206,6 +377,13 @@
                 width="360"
                 height="300"
               />
+              <div class="overlay">
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="title-portfolio">Taxi Service</h3>
                 <p class="text">Marketing</p>
@@ -218,6 +396,13 @@
                 width="360"
                 height="300"
               />
+              <div class="overlay">
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="title-portfolio">Screen Illustrations</h3>
                 <p class="text">Design</p>
@@ -230,6 +415,13 @@
                 width="360"
                 height="300"
               />
+              <div class="overlay">
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="title-portfolio">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -242,13 +434,50 @@
 
     <footer class="section-footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo-start"
-          >Web<span class="footer-logo-finish">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul class="footer-list">
+          <li class="footer-item">
+            <a href="./index.html" class="footer-logo-start"
+              >Web<span class="footer-logo-finish">Studio</span></a
+            >
+            <p class="text-footer">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+          <li class="footer-item">
+            <h4 class="footer-title">Social media</h4>
+            <ul class="footer-list-icon">
+              <li class="footer-item-icon">
+                <div class="footer-icon-border">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="footer-item-icon">
+                <div class="footer-icon-border">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="footer-item-icon">
+                <div class="footer-icon-border">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="footer-item-icon">
+                <div class="footer-icon-border">
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
