--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
               <div class="team-group">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="text-team">Product Designer</p>
-              </div>
-              <div class="team-social">
+
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a href="" class="team-icon-border">
@@ -193,8 +192,7 @@
               <div class="team-group">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="text-team">Frontend Developer</p>
-              </div>
-              <div class="team-social">
+
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a href="" class="team-icon-border">
@@ -242,8 +240,7 @@
               <div class="team-group">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="text-team">Marketing</p>
-              </div>
-              <div class="team-social">
+
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a href="" class="team-icon-border">
@@ -291,8 +288,7 @@
               <div class="team-group">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="text-team">UI Designer</p>
-              </div>
-              <div class="team-social">
+
                 <ul class="team-list-icon">
                   <li class="team-item-icon">
                     <a href="" class="team-icon-border">
@@ -457,46 +453,44 @@
     </main>
 
     <footer class="section-footer">
-      <div class="container">
-        <div class="footer-list">
-          <div class="footer-item">
-            <a href="./index.html" class="footer-logo-start"
-              >Web<span class="footer-logo-finish">Studio</span></a
-            >
-            <p class="text-footer">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="footer-item-socil">
-            <p class="footer-title">Social media</p>
-            <ul class="footer-list-icon">
-              <li class="footer-item-icon">
-                <a href="" class="footer-icon-border"
-                  ><svg class="footer-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram-2"></use></svg
-                ></a>
-              </li>
-              <li class="footer-item-icon">
-                <a href="" class="footer-icon-border">
-                  <svg class="footer-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter-1"></use></svg
-                ></a>
-              </li>
-              <li class="footer-item-icon">
-                <a href="" class="footer-icon-border">
-                  <svg class="footer-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook-1"></use></svg
-                ></a>
-              </li>
-              <li class="footer-item-icon">
-                <a href="" class="footer-icon-border"
-                  ><svg class="footer-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use></svg
-                ></a>
-              </li>
-            </ul>
-          </div>
+      <div class="container-footer">
+        <div class="footer-item">
+          <a href="./index.html" class="footer-logo-start"
+            >Web<span class="footer-logo-finish">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-item-socil">
+          <p class="footer-title">Social media</p>
+          <ul class="footer-list-icon">
+            <li class="footer-item-icon">
+              <a href="" class="footer-icon-border"
+                ><svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
+              ></a>
+            </li>
+            <li class="footer-item-icon">
+              <a href="" class="footer-icon-border">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
+              ></a>
+            </li>
+            <li class="footer-item-icon">
+              <a href="" class="footer-icon-border">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li class="footer-item-icon">
+              <a href="" class="footer-icon-border"
+                ><svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+              ></a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
